<resources>
    <string name="app_name">Food Order</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="currency">USD</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_password_not_match">Confirm Password does\'t match with Password</string>
    <string name="error_phone_too_short">This Phone Number is too short</string>
    <string name="error_invalid_email">Invalid Email Address</string>

    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">******</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="join_us_with_new_register">Join us with New Register</string>
    <string name="new_register">New Register</string>
    <string name="register_new">Register New</string>
    <string name="password_again">Password Again</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_otp_sent_on_your_mobile">Enter OTP sent on your mobile</string>
    <string name="verify">Verify</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="search">Search</string>
    <string name="check_out">Check Out</string>
    <string name="how_would_you_like_to_pay">How would you like to Pay ?</string>
    <string name="amount_to_pay">Amount to pay</string>
    <string name="order_now">Order Now</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="pay_now">Pay Now</string>
    <string name="version">Version</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="contact_us">Contact Us</string>
    <string name="policy">Policy</string>
    <string name="about_app">About App</string>
    <string name="menu">Menu</string>
    <string name="resend_in">Resend in</string>
    <string name="in_sec">in Sec</string>
    <string name="order_id">Order ID:</string>
    <string name="order_placed">Order Placed</string>
    <string name="preparing">Preparing</string>
    <string name="out_for_delivery">Out for Delivery</string>
    <string name="delivered">Delivered</string>
    <string name="add_ons">Add Ons</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="total_amount">Total Amount</string>
    <string name="checkout">Checkout</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="item_qty">Item Qty</string>
    <string name="continue_with_cart">Continue with Cart</string>
    <string name="order_detail">Order Detail</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="resend">Resend</string>
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="add_new">+ Add New</string>
    <string name="my_address">My Address</string>
    <string name="open_at">Open At</string>
    <string name="close_at">Close At</string>
    <string name="select">Select</string>
    <string name="select_delivery_address">Select Delivery Address</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="logout">Logout</string>
    <string name="email_address">Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="cancel">Cancel</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="offers">Offers</string>
    <string name="non_veg">Non Veg.</string>
    <string name="veg">Veg.</string>
    <string name="address">Address</string>
    <string name="detecting_location">Detection Location</string>
    <string name="deliver_here">Deliver here</string>
    <string name="unable_to_detect_location">Unable to detect location</string>
    <string name="track_orders">Track Orders</string>
    <string name="cart">Cart</string>
    <string name="are_you_sure_you_want_to_clear_cart">Are you sure! you want to clear cart?</string>
    <string name="ok">Ok</string>
    <string name="delivery_at">Delivery At:</string>
    <string name="total_items">Total Items:</string>
    <string name="have_you_promo_code">Have you Promo Code ?</string>
    <string name="enter_promo_code_here">Enter Promo Code here</string>
    <string name="promo_discount_applied">Promo Discount Applied</string>
    <string name="write_order_note">Write Order Note:</string>
    <string name="pickup_at">Pickup At:</string>
    <string name="your_order_place_successfully">Your order place successfully</string>
    <string name="thanks_for_your_order">Thanks for your order</string>
    <string name="booking_details">Booking Details</string>
    <string name="date">Date:</string>
    <string name="sub_total">Sub Total:</string>
    <string name="discount">Discount:</string>
    <string name="total_paid">Total Paid:</string>
    <string name="gateway_charges">Gateway Charges:</string>
    <string name="continue1">Continue</string>
    <string name="flat">Flat</string>
    <string name="ready">Ready</string>
    <string name="picked">Picked</string>
    <string name="cancelled">Cancelled</string>
    <string name="if_you_re_order_your_product_than_old_cart_data_is_cleared_and_re_order_data_will_added">If you re order your product than old cart data is cleared and re order data will added.</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="type_your_coupon_code_here">Type your coupon code here</string>
    <string name="verify_and_apply">Verify and Apply</string>
    <string name="now">Now</string>
    <string name="choose_language">Choose Language</string>
    <string name="change_language">Change Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="send">Send</string>
    <string name="quick_contact">Quick Contact</string>
    <string name="write_your_message_here">Write your message here...</string>
    <string name="feel_free_to_contact_us_if_need_any_help_of_support">Feel free to Contact Us if need any help of Support</string>
    <string name="how_many_i_help_you">How may i help you</string>
    <string name="home">Home</string>
    <string name="cooking">Cooking</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="discount_prcode">Discount (PRCODE)</string>
    <string name="your_recent_items">Your Recent Items</string>
    <string name="please_wait_until_finish_transaction">Please wait until finish transaction</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="track_order">Track Order</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="about_us">About Us</string>
    <string name="agree_with_terms_and_conditions">Agree with Terms and Conditions</string>
    <string name="do_you_have_account">Do you have account?</string>
    <string name="login_now">Login Now</string>
    <string name="to_enjoy_delicious_food_please_join_us">To enjoy delicious food please join us</string>
    <string name="cart_amount">Cart Amount:</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="how_would_you_like_to_get_your_order">How would you like to get your order?</string>
    <string name="pickup_parcel">Pickup Parcel</string>
    <string name="empty_tray">Empty Tray</string>
    <string name="tap_met_to_add_some_food">Tap Met to add some food.</string>

</resources>
