<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.change_reset_password.ChangeResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_20">

        <customViews.EditTextRegular
            android:id="@+id/et_change_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_10"
            android:background="@drawable/xml_view_white"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/space_10"
            android:ems="10"
            android:gravity="start|bottom"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:padding="@dimen/space_10"
            android:textAlignment="viewStart" />

        <customViews.EditTextRegular
            android:id="@+id/et_change_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_10"
            android:background="@drawable/xml_view_white"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/space_10"
            android:ems="10"
            android:gravity="start|bottom"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:padding="@dimen/space_10"
            android:textAlignment="viewStart" />

        <customViews.EditTextRegular
            android:id="@+id/et_change_password_new_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_10"
            android:background="@drawable/xml_view_white"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/space_10"
            android:ems="10"
            android:gravity="start|bottom"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:maxLength="15"
            android:padding="@dimen/space_10"
            android:textAlignment="viewStart" />

        <customViews.ButtonBold
            android:id="@+id/btn_change_password_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:background="@drawable/xml_button_red"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_18" />

    </LinearLayout>

</ScrollView>